--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             </header>
             <!--end header-->
             <!--start main-->
-            <main>
+            <main class="hide">
                 <div class="info">
                     <div class="player">
                         <p>X's Turn</p>
                         <p>O's Turn</p>
+                        <div class="slider"></div>
                     </div>
                 </div>
                 <div class="area">
@@ -40,8 +41,9 @@
                 </div>
             </main>
             <!--end main-->
-            <section class="result">
+            <section class="result hide">
                 <p>Match has been drawn!</p>
+                <button class="replay">Replay</button>
             </section>
         </div>
         <script src="script.js"></script>
