--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
                     </div>
                 </div>
                 <div class="area">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
+                    <div class="box1"></div>
+                    <div class="box2"></div>
+                    <div class="box3"></div>
+                    <div class="box4"></div>
+                    <div class="box5"></div>
+                    <div class="box6"></div>
+                    <div class="box7"></div>
+                    <div class="box8"></div>
+                    <div class="box9"></div>
                 </div>
             </main>
             <!--end main-->
             <section class="result hide">
-                <p>Match has been drawn!</p>
+                <p class="result-text"></p>
                 <button class="replay">Replay</button>
             </section>
         </div>
